[package]
name = "gtkhello"
version = "0.1.0"
authors = ["Craig Prevallet <penguintx@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.0"
log = "0.4.0"
env_logger = "0.8.3"

[dependencies.gtk]
version = "0.9.0"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]

